trunk/Archive2/cd/b503d7f4fe4a06/output
main.cpp:4:2: error: static_assert failed "Min 1 for N"
 static_assert(N > 0, "Min 1 for N");
 ^             ~~~~~
main.cpp:11:8: note: in instantiation of template class 'Foo<0>' requested here
Foo<0> q; //explicit instantiation, compilation fails
       ^
1 error generated.
